--- a/django-16/myDjango/mblog/templates/index.html
+++ b/django-16/myDjango/mblog/templates/index.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>欢迎来到我的博客</title>
-</head>
-<hr>
-<h1>我的博客</h1>
-<body>
-<hr>
-{% for post in posts %}
-    <p style="font-family:微软雅黑">
-        <a href="/post/{{post.slug}}">{{ post.title }}</a>
-    </p>
-{% endfor  %}
-</hr>
-<h3>现在时间：{{now}}</h3>
-</body>
-</html>
+<!--index.html-->
+{% extends 'base.html' %}
+{% block tytle %} welcome to my blog{% endblock %}
+{% block headmessage %}
+    <h3>the list of artitle</h3>
+{% endblock %}
+{% block content %}
+    {% for post in posts %}
+<p><a href="/post/{{post.slug}}">{{post.title}}</a></p>
+    {% endfor %}
+{% endblock %}
