--- a/django-16/myDjango/mblog/templates/post.html
+++ b/django-16/myDjango/mblog/templates/post.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<a lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>我的博客</title>
-</head>
-<hr>
-    <h1>{{ post.title }}</h1>
-    <hr>
+{% extends 'base.html' %}
+{% block title %} {{ post.title }}-文学天地   {% endblock %}
+{% block headmessage %}
+
+    <h3>{{ post.title }}</h3><a href="/">回首页</a>
+{% endblock %}
+{% block content %}
         <p style="font-family:微软雅黑">
             {{  post.body}}</p></a>
         </p>
-</hr>
-<h3><a href="/">回首页</a></h3>
-</body>
-</html>
+{% endblock %}
